--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,10 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "nodemon": "^3.1.7",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
   }
 }
