--- a/Doctor/package.json
+++ b/Doctor/package.json
@@ -27,10 +27,12 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-password-strength-bar": "^0.4.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
