--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'no build step needed'"
+    "build": "npm install"
   },
   "keywords": [],
   "author": "",
