--- a/Doctor/package.json
+++ b/Doctor/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "lint": "eslint ."
+}
+,
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@vitejs/plugin-react": "^4.3.2",
