--- a/Patient/package.json
+++ b/Patient/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "start": "react-scripts start",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "lint": "eslint ."
+}
+,
   "dependencies": {
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@vitejs/plugin-react": "^4.3.2",
